[project]
name = "my_google_search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "googlesearch-python"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
google-search-mcp = "google_search_mcp.search_server:run_server"
